--- a/ITSkills/ITSkills.csproj
+++ b/ITSkills/ITSkills.csproj
@@ -65,6 +65,12 @@
     <Compile Include="EmployeeGrid.Designer.cs">
       <DependentUpon>EmployeeGrid.cs</DependentUpon>
     </Compile>
+    <Compile Include="InputDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InputDialog.Designer.cs">
+      <DependentUpon>InputDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="ITSkills.cs">
       <DependentUpon>ITSkills.dbml</DependentUpon>
     </Compile>
@@ -75,6 +81,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SkillsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SkillsForm.Designer.cs">
+      <DependentUpon>SkillsForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddEmployeeForm.resx">
       <DependentUpon>AddEmployeeForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -83,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EmployeeGrid.resx">
       <DependentUpon>EmployeeGrid.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InputDialog.resx">
+      <DependentUpon>InputDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -93,6 +108,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SkillsForm.resx">
+      <DependentUpon>SkillsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="ITSkills.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>ITSkills.designer.cs</LastGenOutput>
