--- a/ITSkills/ITSkills.csproj
+++ b/ITSkills/ITSkills.csproj
@@ -79,6 +79,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ITSkills.dbml</DependentUpon>
     </Compile>
+    <Compile Include="ProfessionsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProfessionsForm.Designer.cs">
+      <DependentUpon>ProfessionsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SkillsForm.cs">
@@ -98,6 +104,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="InputDialog.resx">
       <DependentUpon>InputDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProfessionsForm.resx">
+      <DependentUpon>ProfessionsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
