Some fixes to InputDialog

--- a/ITSkills/App.config
+++ b/ITSkills/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="ITSkills.Properties.Settings.ITSkillsDBConnectionString"
-            connectionString="Data Source=DESKTOP-V2PRUR7;Initial Catalog=ITSkillsDB;Integrated Security=True"
+            connectionString="Data Source=DESKTOP-T8AD676;Initial Catalog=ITSkillsDB;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
